# utility

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  utility.cpp  utility.h
